--- a/SegmentCluster Toronto Part 1.ipynb
+++ b/SegmentCluster Toronto Part 1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>Part 1: Create Dataframe</h2>"
+    "<h2>Part 1 of 3: Create Dataframe</h2>"
    ]
   },
   {
